Update for linux OS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
-set(VCPKG_ROOT "C:/vcpkg")
+set(VCPKG_ROOT "/home/parrot/vcpkg")
 set(CMAKE_TOOLCHAIN_FILE "${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
 
 project(PasswordManager)
@@ -22,15 +22,15 @@ find_package(mongoc-1.0 REQUIRED)
 # Add the cryptopp-cmake subdirectory
 add_subdirectory(cryptopp-cmake-CRYPTOPP_8_9_0)
 
-include_directories("${VCPKG_ROOT}/installed/x64-windows/include/mongocxx/v_noabi")
-include_directories("${VCPKG_ROOT}/installed/x64-windows/include/bsoncxx/v_noabi")
-include_directories("${VCPKG_ROOT}/installed/x64-windows/include")
-include_directories("${VCPKG_ROOT}/installed/x64-windows/lib")
+include_directories("${VCPKG_ROOT}/installed/x64-linux/include/mongocxx/v_noabi")
+include_directories("${VCPKG_ROOT}/installed/x64-linux/include/bsoncxx/v_noabi")
+include_directories("${VCPKG_ROOT}/installed/x64-linux/include")
+include_directories("${VCPKG_ROOT}/installed/x64-linux/lib")
 
 
 # Add the executable
 add_executable(pm main.cpp Account.cpp AESEncryption.cpp PasswordManager.cpp DatabaseHandler.cpp SHAHashing.cpp)
 
 # Link the necessary libraries
-target_link_libraries(pm cryptopp::cryptopp nlohmann_json::nlohmann_json mongo::mongocxx_shared mongo::mongoc_shared mongo::bson_shared mongo::bsoncxx_shared)
+target_link_libraries(pm cryptopp::cryptopp nlohmann_json::nlohmann_json mongo::mongocxx_static mongo::mongoc_static mongo::bson_static mongo::bsoncxx_static)
 
